--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <section id="testimonials" class="py-5">
         <div class="container text-center">
-            <h2 class="fw-bold">What Our Users Say 1 2 </h2>
+            <h2 class="fw-bold">What Our Users Say 1 2 3</h2>
             <div class="row mt-4">
                 <div class="col-md-6">
                     <div class="p-4 shadow-sm rounded bg-white d-flex flex-column h-100">
